objects/geopointe__GP_Route_Plan_Config_Batch_Job__c.object
<CustomObject>
    <description>Stores data for the batch job from one route plan configuration.</description>
    <fields>
        <fullName>geopointe__Batch_Job_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Batch Job Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Errored_Optimizations__c</fullName>
        <label>Errored Optimizations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Geopointe_Route_Plan_Configuration__c</fullName>
        <label>Geopointe Route Plan Configuration</label>
        <referenceTo>geopointe__GP_Route_Plan_Configuration__c</referenceTo>
        <relationshipLabel>Geopointe Route Plan Config Batch Jobs</relationshipLabel>
        <relationshipName>Route_Plan_Config_Batch_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>geopointe__Pending_Optimizations__c</fullName>
        <label>Pending Optimizations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>geopointe__Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Submitted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>geopointe__Total_Optimizations__c</fullName>
        <label>Total Optimizations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Geopointe Route Plan Config Batch Job</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Route Plan Batch Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Route Plan Config Batch Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>